Huh, oh, fix old Java compatibility after the last change. :|